--- a/server/package.json
+++ b/server/package.json
@@ -1,5 +1,6 @@
 {
   "devDependencies": {
+    "@babel/core": "^7.22.10",
     "@types/express": "^4.17.1",
     "@types/node": "^20.4.4",
     "install": "^0.13.0",
@@ -8,8 +9,13 @@
     "typescript": "^5.1.6"
   },
   "dependencies": {
+    "@babel/preset-react": "^7.22.5",
     "@types/mssql": "^8.1.2",
+    "babel": "^6.23.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
+    "jsx": "^0.9.89",
+    "jsx-node": "^0.3.1",
     "msnodesqlv8": "^4.1.0",
     "mssql": "^9.1.1",
     "tedious": "^16.2.0"
