--- a/server/package.json
+++ b/server/package.json
@@ -13,11 +13,12 @@
     "@types/mssql": "^8.1.2",
     "babel": "^6.23.0",
     "cors": "^2.8.5",
-    "express": "^4.17.1",
+    "express": "^4.18.2",
     "jsx": "^0.9.89",
     "jsx-node": "^0.3.1",
     "msnodesqlv8": "^4.1.0",
     "mssql": "^9.1.1",
+    "socket.io": "^4.7.2",
     "tedious": "^16.2.0"
   },
   "scripts": {
