--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@babel/preset-react": "^7.22.5",
     "@types/mssql": "^8.1.2",
+    "@types/socket.io": "^3.0.2",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "msnodesqlv8": "^4.1.0",
