--- a/server/.vscode/settings.json
+++ b/server/.vscode/settings.json
@@ -10,12 +10,14 @@
         "Build/types": true,
         "package-lock.json": true,
         "node_modules": true,
-        "Build": true
+        "Build": true,
+        ".vscode": true
     },
     "hide-files.files": [
         "Build/types",
         "package-lock.json",
         "node_modules",
-        "Build"
+        "Build",
+        ".vscode"
     ]
 }
