--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -6,7 +6,23 @@
     "target": "es6",
     "moduleResolution": "node",
     "sourceMap": true,
-    "outDir": "Build"
-  },
-  "lib": ["es2015"]
+    "outDir": "Build",
+    "paths": {
+       "@Validations/*"   : ["./Validations/*"],
+       "@API/*"           : ["./Api/*"],
+       "@Entities/*"      : ["./Models/Entities/*"],
+       "@Categories/*"    : ["./Models/Categories/*"],
+       "@Settings/*"      : ["./Models/Settings/*"],
+       "@Interfaces/*"    : ["./Interfaces/*"],
+       "@Functions/*"     : ["./Functions/*"],
+       "@Dev/*"           : ["./Dev/*"],
+       "@Database/*"      : ["./Database/*"],
+       "@JsonModels/*"    : ["./Database/JsonModels/*"],
+       "@DbModels/*"      : ["./Database/DbModels/*"],
+       "@MiddleWares/*"   : ["./MiddleWares/*"],
+       "@Root/*"          : ["./*"],
+       "@AllTypesTable"   : ["./Database/DbModels/allTypesTable"]
+    },
+    "lib": ["es2015"]
+  }
 }
